# ai-chat-bubble

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.html  docker-compose.yml  dockerfile  gitignore  main.py  models.py  package.json  pyproject.toml
app/: .dockerignore  .env.example  .gitignore  dockerfile  gcp_deploy.sh  main.py  models.py  package-lock.json  pyproject.toml  webpack.config.js
app/interface/: chat-bubble.js
app/scraper/: items.py
app/scraper/spiders/: spider.py
component/: chat-bubble.js
scraper/: __init__.py  middlewares.py  pipelines.py  settings.py
scraper/spiders/: spider.py
